--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -5,32 +5,48 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="//cod>e.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="ejs_production.js"></script>
+	<script type="text/javascript">
+	</script>
 	<style>
 		body 		{ padding-top:80px; }
+		.borderless > tbody > tr > td {
+			border: none;
+		}
 	</style>
 </head>
 <body>
 <div class="container">
 	<div class="jumbotron text-center">
-		<h1>Hack_Pizza</h1>
+		<h1>hack_pizza</h1>
 		<br>
 		<h2>Nearby Orders</h2>
 		<br>
+		<% for(var i=0; i < orders.length; i++) { %>
 		<div class="panel panel-default">
-			<div class="panel-heading">Larry Page's Pizza Order</div>
+			<div class="panel-heading">
+				<h3 class="text-left">
+					<%= orders[i].name %>
+					<button type="button" class="btn btn-default btn-lrg pull-right">Join Order</button>
+				</h3>
+			</div>
 			<div class="panel-body">
-			<p class="text-left">Description: Yo we need some pizza up in this muthafucka<p>
-			<p class="text-left">Cost: $6 million or 2% equity per slice<p>
-			<p class="text-left">Location: Pussytown<p>
-			<hr>
-			<div class="progress">
-				<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-				6/10 slices
+				<table class="table borderless">
+					<tr><td class="col-md-2 text-left">Description:</td><td class="text-left"><%= orders[i].description %></td></tr>
+					<tr><td class="col-md-2 text-left">Status:</td><td class="text-left"><%= orders[i].status %></td></tr>
+					<tr><td class="col-md-2 text-left">Cost:</td><td class="text-left">$<%= orders[i].slice_cost %></td></tr>
+					<tr><td class="col-md-2 text-left">Location:</td><td class="text-left"><%= orders[i].location.description %></td></tr>
+				</table>
+				<hr>
+				<div class="progress">
+					<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+					6/10 slices
+					</div>
 				</div>
 			</div>
-			</div>
 		</div>
+		<% } %>
 	</div>
 </div>
 </body>
