--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -6,9 +6,8 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="//cod>e.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="ejs_production.js"></script>
-	<script type="text/javascript">
-	</script>
 	<style>
 		body 		{ padding-top:80px; }
 		.borderless > tbody > tr > td {
