--- a/views/nearby_orders.ejs
+++ b/views/nearby_orders.ejs
@@ -10,12 +10,79 @@
 	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="static/js/ejs_production.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.1/js/bootstrapValidator.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('#create-form').bootstrapValidator({
+        message: 'This value is not valid',
+        feedbackIcons: {
+          valid: 'glyphicon glyphicon-ok',
+          invalid: 'glyphicon glyphicon-remove',
+          validating: 'glyphicon glyphicon-refresh'
+        },
+        fields: {
+          order_name: {
+            message: 'The order name is not valid',
+            validators: {
+              notEmpty: {
+                message: 'The order name is required and cannot be empty'
+              },
+              stringLength: {
+                max: 30,
+                message: 'The order name must be less than 30 characters long'
+              }
+            }
+          },
+          order_description: {
+            message: 'The order description is not valid',
+            validators: {
+              notEmpty: {
+                message: 'The order description is required and cannot be empty'
+              },
+              stringLength: {
+                max: 280,
+                message: 'The order name must be less than 30 characters long'
+              }
+            }
+          },
+          slice_cost: {
+            message: 'The slice cost is not valid',
+            validators: {
+              notEmpty: {
+                message: 'The slice cost is required and cannot be empty'
+              }
+            }
+          },
+          orderer_slices: {
+            message: 'The orderer slices is not valid',
+            validators: {
+              notEmpty: {
+                message: 'The number of ordered slices is required and cannot be empty'
+              }
+            }
+          },
+          total_slices: {
+            message: 'The total slices is not valid',
+            validators: {
+              notEmpty: {
+                message: 'The number of total slices is required and cannot be empty'
+              }
+            }
+          }
+        }
+      });
+    });
+  </script>
 	<style>
 		body 		{ padding-top:80px; }
 		.borderless > tbody > tr > td {
 			border: none;
 		}
+    #create-form .inputGroupContainer .form-control-feedback,
+    #create-form .selectContainer .form-control-feedback {
+      top: 0;
+      right: -15px;
+}
 	</style>
 </head>
 <body>
@@ -24,7 +91,7 @@
 		<h1>hack_pizza</h1>
 	</div>
 		<h2>Nearby Orders
-		<a class="btn btn-default pull-right" href="#add-order">Create Order</a>
+		<a class="btn btn-default pull-right" href="#create-order">Create Order</a>
 		</h2>
 		<br>
 	<div>
@@ -53,45 +120,45 @@
 		</div>
 		<% } %>
 		<hr>
-		<div class="panel panel-default" id="add-order">
+		<div class="panel panel-default" id="create-order">
 			<div class="panel-heading">
 				<h3>Create Order</h3>
 			</div>
 			<div class="panel-body">
-				<form class="form-horizontal" action="/create-order" id="createForm" method="post">
+				<form class="form-horizontal" action="/create-order" id="create-form" method="post">
 					<!-- Name Input -->
 					<div class="form-group">
 							<label for="inputName" class="control-label col-xs-3">Your Name</label>
 							<div class="col-xs-8">
-									<input type="text" class="form-control" id="order_name" placeholder="Name">
+									<input type="text" class="form-control" name="order_name" id="order_name" placeholder="Name">
 							</div>
 					</div>
 					<!-- Description Input -->
 					<div class="form-group">
 							<label for="inputDescription" class="control-label col-xs-3">Order Description</label>
 							<div class="col-xs-8">
-									<textarea class="form-control" id="order_description" placeholder="Description"></textarea>
+									<textarea class="form-control" name="order_description" id="order_description" placeholder="Description"></textarea>
 							</div>
 					</div>
 					<!-- Number of Slices Input -->
 					<div class="form-group">
 							<label for="total_slices" class="control-label col-xs-3">Number of Slices in Order</label>
 							<div class="col-xs-8">
-									<input type="number" class="form-control" id="total_slices" placeholder="Number of slices">
+									<input type="number" class="form-control" name="total_slices" id="total_slices" placeholder="Number of slices">
 							</div>
 					</div>
 					<!-- Cost per Slice Input -->
 					<div class="form-group">
 							<label for="slice_cost" class="control-label col-xs-3">Cost Per Slice</label>
 							<div class="col-xs-8">
-									<input type="number" min="0.01" step="0.25" pattern="^\d*(\.\d{2}$)?" title="CDA Currency Format - no dollar sign and no comma(s) - cents (.##) are optional" class="form-control" id="slice_cost" placeholder="Cost per slice">
+									<input type="number" min="0.01" step="0.25" pattern="^\d*(\.\d{2}$)?" title="CDA Currency Format - no dollar sign and no comma(s) - cents (.##) are optional" class="form-control" name="slice_cost" id="slice_cost" placeholder="Cost per slice">
 							</div>
 					</div>
 					<!-- Orderer Slices Input -->
 					<div class="form-group">
 							<label for="inputOrdererSlices" class="control-label col-xs-3">Number of Slices You Want</label>
 							<div class="col-xs-8">
-									<input type="number" class="form-control" id="orderer_slices" placeholder="Number of slices you want">
+									<input type="number" class="form-control" name="orderer_slices" id="orderer_slices" placeholder="Number of slices you want">
 							</div>
 					</div>
 					<!-- Location Input -->
@@ -111,17 +178,17 @@
 
                 $("<input type='text' />")
                  .attr("value", token)
-                 .attr("id", "token")
-                 .appendTo("#createForm");
+                 .attr("name", "token")
+                 .appendTo("#create-form");
                 $("<input type='text' />")
                  .attr("value", 0)
-                 .attr("id", "latitude")
-                 .appendTo("#createForm");
+                 .attr("name", "latitude")
+                 .appendTo("#create-form");
                 $("<input type='text' />")
                  .attr("value", 0)
-                 .attr("id", "longitude")
-                 .appendTo("#createForm");
-                document.getElementById('createForm').submit();
+                 .attr("name", "longitude")
+                 .appendTo("#create-form");
+                document.getElementById('create-form').submit();
               }
             });
             document.getElementById('createButton').addEventListener('click', function(e) {
