--- a/views/order.ejs
+++ b/views/order.ejs
@@ -1,1 +1,33 @@
+<!doctype html>
 <%= order %>
+<!--<html>
+<head>
+	<title>Node Authentication</title>
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+	<link rel="stylesheet" href="static/css/jumbotron-narrow.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css"/>
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="static/js/ejs_production.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.1/js/bootstrapValidator.min.js"></script>
+	<style>
+		body 		{ padding-top:80px; }
+		.borderless > tbody > tr > td {
+			border: none;
+		}
+	</style>
+</head>
+<body>
+<div class="container">
+	<div class="jumbotron text-center">
+		<h1>hack_pizza</h1>
+	</div>
+  <div>
+		<h2><%= order.name ></h2>
+		<br>
+  </div>
+</div>
+</body>
+</html> -->
