--- a/views/nearby_orders.ejs
+++ b/views/nearby_orders.ejs
@@ -100,7 +100,7 @@
 			<div class="panel-heading">
 				<h3 class="text-left">
 					<%= orders[i].name %>
-					<button type="button" class="btn btn-default btn-lrg pull-right">Join Order</button>
+					<a class="btn btn-default btn-lrg pull-right" href="/order/<%= orders[i]._id %>">Join Order</a>
 				</h3>
 			</div>
 			<div class="panel-body">
@@ -144,19 +144,19 @@
 					<div class="form-group">
 							<label for="total_slices" class="control-label col-xs-3">Number of Slices in Order</label>
 							<div class="col-xs-8">
-									<input type="number" class="form-control" name="total_slices" id="total_slices" placeholder="Number of slices">
+									<input type="number" min="2" class="form-control" name="total_slices" id="total_slices" placeholder="Number of slices">
 							</div>
 					</div>
 					<!-- Cost per Slice Input -->
 					<div class="form-group">
 							<label for="slice_cost" class="control-label col-xs-3">Cost Per Slice</label>
 							<div class="col-xs-8">
-									<input type="number" min="0.01" step="0.25" pattern="^\d*(\.\d{2}$)?" title="CDA Currency Format - no dollar sign and no comma(s) - cents (.##) are optional" class="form-control" name="slice_cost" id="slice_cost" placeholder="Cost per slice">
+									<input type="number" min="0.00" step="0.25" pattern="^\d*(\.\d{2}$)?" title="CDA Currency Format - no dollar sign and no comma(s) - cents (.##) are optional" class="form-control" name="slice_cost" id="slice_cost" placeholder="Cost per slice">
 							</div>
 					</div>
 					<!-- Orderer Slices Input -->
 					<div class="form-group">
-							<label for="inputOrdererSlices" class="control-label col-xs-3">Number of Slices You Want</label>
+							<label for="inputOrdererSlices" min="1" class="control-label col-xs-3">Number of Slices You Want</label>
 							<div class="col-xs-8">
 									<input type="number" class="form-control" name="orderer_slices" id="orderer_slices" placeholder="Number of slices you want">
 							</div>
