added confirm delivery button

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -4,12 +4,12 @@
 	<title>Order Status</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-	<link rel="stylesheet" href="static/css/jumbotron-narrow.css">
+	<link rel="stylesheet" href="/static/css/jumbotron-narrow.css">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css"/>
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="static/js/ejs_production.js"></script>
+	<script type="text/javascript" src="/static/js/ejs_production.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.1/js/bootstrapValidator.min.js"></script>
 	<style>
 		body 		{ padding-top:80px; }
@@ -33,10 +33,14 @@
           <p>$<%= Number(order.slice_cost).toFixed(2) %></p>
           <h4>Status</h4>
           <p><%= order.status %></p>
+          <form action="/confirm-delivery" method="post">
+            <input type="text" name="order_key" value="<%= order._id %>" hidden>
+            <input type="submit" class="btn btn-default btn-large" value="Confirm Delivery">
+          </form>
         </div>
 
         <div class="col-lg-6">
-          <img src="/static/img/sample_map.png">
+          <img src="/static/img/sample_map.png" class="img-responsive">
         </div>
       </div>
 		<br>
