--- a/views/order.ejs
+++ b/views/order.ejs
@@ -19,6 +19,7 @@
 	</style>
 </head>
 <body>
+<%= order %>
 <div class="container">
 	<div class="jumbotron text-center">
 		<h1>hack_pizza</h1>
@@ -33,10 +34,12 @@
           <p>$<%= Number(order.slice_cost).toFixed(2) %></p>
           <h4>Status</h4>
           <p><%= order.status %></p>
+          <% if(is_groupie) { %>
           <form action="/confirm-delivery" method="post">
             <input type="text" name="order_key" value="<%= order._id %>" hidden>
             <input type="submit" class="btn btn-default btn-large" value="Confirm Delivery">
           </form>
+          <% } %>
         </div>
 
         <div class="col-lg-6">
