totally necessary commit

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -35,7 +35,7 @@
           <h4>Price per slice</h4>
           <p>$<%= Number(order.slice_cost).toFixed(2) %></p>
           <h4>Available slices</h4>
-          <p><%= order.avialable_slices + " out of " + order.total_slices + "slices" %></p>
+          <p><%= order.available_slices + " out of " + order.total_slices + " slices" %></p>
           <h4>Status</h4>
           <p><%= order.status %></p>
           <% if(is_groupie) { %>
